--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         border-style: solid;
         border-color: black;
         border-width: 1px;
+
+        box-shadow: 10px 10px 0px 0px black;
       }
 
       .card > img {
